// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Auth module snapshots - SignIn > matches snapshot for unauthenticated state with no recent wallet 1`] = `
<div
  class="min-h-screen flex flex-col"
>
  <div
    class="flex flex-1"
  >
    <div
      class="w-full lg:w-[40%] flex flex-col justify-start px-6 py-8 lg:px-10 lg:py-10 bg-white overflow-y-auto"
    >
      <div
        class="mb-8 lg:mb-12"
      >
        <img
          alt="Tradazone"
          class="object-contain h-7 lg:h-9"
          src="logo-blue.png"
        />
      </div>
      <h1
        class="text-xl lg:text-3xl font-bold text-t-primary mb-3 leading-snug"
      >
        Manage clients, send invoices, and accept payments directly into your preferred wallet
      </h1>
      <p
        class="text-sm text-t-muted mb-8 lg:mb-10"
      >
        Connect your wallet to get started
      </p>
      <div
        class="mb-6 rounded-xl border border-border bg-gray-50/80 p-4"
      >
        <div
          class="mb-3"
        >
          <h2
            class="text-sm font-semibold text-t-primary"
          >
            Business description draft
          </h2>
          <p
            class="text-xs text-t-muted"
          >
            Add formatted context about your business before you connect. Tradazone keeps this draft on this device and syncs it into your profile after the next successful wallet session.
          </p>
        </div>
        <div
          class="flex flex-col gap-1.5 "
        >
          <label
            class="text-xs font-medium text-t-secondary uppercase tracking-wide"
            for="signin-business-description"
          >
            Business Description
          </label>
          <div
            class="border rounded-lg bg-white border-border"
          >
            <div
              class="flex flex-wrap items-center gap-2 px-3 py-2 border-b border-border bg-gray-50 rounded-t-lg"
            >
              <button
                aria-label="Bold"
                class="inline-flex min-w-8 items-center justify-center rounded-md border border-border bg-white px-2 py-1 text-xs font-semibold text-t-secondary hover:border-brand hover:text-brand"
                type="button"
              >
                B
              </button>
              <button
                aria-label="Italic"
                class="inline-flex min-w-8 items-center justify-center rounded-md border border-border bg-white px-2 py-1 text-xs font-semibold text-t-secondary hover:border-brand hover:text-brand"
                type="button"
              >
                I
              </button>
              <button
                aria-label="Bullets"
                class="inline-flex min-w-8 items-center justify-center rounded-md border border-border bg-white px-2 py-1 text-xs font-semibold text-t-secondary hover:border-brand hover:text-brand"
                type="button"
              >
                List
              </button>
              <button
                aria-label="Clear formatting"
                class="inline-flex min-w-8 items-center justify-center rounded-md border border-border bg-white px-2 py-1 text-xs font-semibold text-t-secondary hover:border-brand hover:text-brand"
                type="button"
              >
                Clear
              </button>
            </div>
            <div
              class="relative"
            >
              <span
                class="pointer-events-none absolute left-3 top-3 text-sm text-t-muted"
              >
                Describe your business, products, or services before connecting...
              </span>
              <div
                aria-label="Business Description"
                aria-multiline="true"
                class="min-h-36 px-3 py-3 text-sm text-t-primary outline-none"
                contenteditable="true"
                id="signin-business-description"
                role="textbox"
              />
            </div>
          </div>
          <span
            class="text-xs text-t-muted"
          >
            Supports bold, italic, and bullet lists. The draft is sanitized before it is stored.
          </span>
        </div>
      </div>
      <button
        class="w-full inline-flex items-center justify-center gap-2 px-4 py-2.5 h-10 bg-brand text-white text-sm font-semibold hover:opacity-90 active:scale-95 transition-all mb-4 rounded-lg"
      >
        Connect Wallet
      </button>
      <button
        aria-label="Export authentication data to CSV"
        class="w-full inline-flex items-center justify-center gap-2 px-4 py-2.5 h-10 bg-gray-100 text-gray-700 text-sm font-semibold hover:bg-gray-200 active:scale-95 transition-all mb-6 rounded-lg"
      >
        Export to CSV
      </button>
    </div>
    <div
      class="hidden lg:block lg:w-[60%] bg-gray-50 relative overflow-hidden"
    >
      <img
        alt="Tradazone — invoices, payments, crypto"
        class="absolute inset-0 w-full h-full object-cover"
        src="auth-splash.svg"
      />
    </div>
  </div>
</div>
`;

exports[`Auth module snapshots - SignIn > matches snapshot when a returning wallet hint is available 1`] = `
<div
  class="min-h-screen flex flex-col"
>
  <div
    class="flex flex-1"
  >
    <div
      class="w-full lg:w-[40%] flex flex-col justify-start px-6 py-8 lg:px-10 lg:py-10 bg-white overflow-y-auto"
    >
      <div
        class="mb-8 lg:mb-12"
      >
        <img
          alt="Tradazone"
          class="object-contain h-7 lg:h-9"
          src="logo-blue.png"
        />
      </div>
      <h1
        class="text-xl lg:text-3xl font-bold text-t-primary mb-3 leading-snug"
      >
        Manage clients, send invoices, and accept payments directly into your preferred wallet
      </h1>
      <p
        class="text-sm text-t-muted mb-8 lg:mb-10"
      >
        Connect your wallet to get started
      </p>
      <div
        class="flex items-center gap-2 px-4 py-3 mb-5 bg-brand/5 border border-brand/20 rounded-lg text-sm text-brand"
      >
        <span
          class="w-2 h-2 rounded-full bg-brand flex-shrink-0"
        />
        <span>
          Welcome back — reconnect
           
          <span
            class="font-mono font-medium"
          >
            0x1234...5678
          </span>
           to continue
        </span>
      </div>
      <div
        class="mb-6 rounded-xl border border-border bg-gray-50/80 p-4"
      >
        <div
          class="mb-3"
        >
          <h2
            class="text-sm font-semibold text-t-primary"
          >
            Business description draft
          </h2>
          <p
            class="text-xs text-t-muted"
          >
            Add formatted context about your business before you connect. Tradazone keeps this draft on this device and syncs it into your profile after the next successful wallet session.
          </p>
        </div>
        <div
          class="flex flex-col gap-1.5 "
        >
          <label
            class="text-xs font-medium text-t-secondary uppercase tracking-wide"
            for="signin-business-description"
          >
            Business Description
          </label>
          <div
            class="border rounded-lg bg-white border-border"
          >
            <div
              class="flex flex-wrap items-center gap-2 px-3 py-2 border-b border-border bg-gray-50 rounded-t-lg"
            >
              <button
                aria-label="Bold"
                class="inline-flex min-w-8 items-center justify-center rounded-md border border-border bg-white px-2 py-1 text-xs font-semibold text-t-secondary hover:border-brand hover:text-brand"
                type="button"
              >
                B
              </button>
              <button
                aria-label="Italic"
                class="inline-flex min-w-8 items-center justify-center rounded-md border border-border bg-white px-2 py-1 text-xs font-semibold text-t-secondary hover:border-brand hover:text-brand"
                type="button"
              >
                I
              </button>
              <button
                aria-label="Bullets"
                class="inline-flex min-w-8 items-center justify-center rounded-md border border-border bg-white px-2 py-1 text-xs font-semibold text-t-secondary hover:border-brand hover:text-brand"
                type="button"
              >
                List
              </button>
              <button
                aria-label="Clear formatting"
                class="inline-flex min-w-8 items-center justify-center rounded-md border border-border bg-white px-2 py-1 text-xs font-semibold text-t-secondary hover:border-brand hover:text-brand"
                type="button"
              >
                Clear
              </button>
            </div>
            <div
              class="relative"
            >
              <span
                class="pointer-events-none absolute left-3 top-3 text-sm text-t-muted"
              >
                Describe your business, products, or services before connecting...
              </span>
              <div
                aria-label="Business Description"
                aria-multiline="true"
                class="min-h-36 px-3 py-3 text-sm text-t-primary outline-none"
                contenteditable="true"
                id="signin-business-description"
                role="textbox"
              />
            </div>
          </div>
          <span
            class="text-xs text-t-muted"
          >
            Supports bold, italic, and bullet lists. The draft is sanitized before it is stored.
          </span>
        </div>
      </div>
      <button
        class="w-full inline-flex items-center justify-center gap-2 px-4 py-2.5 h-10 bg-brand text-white text-sm font-semibold hover:opacity-90 active:scale-95 transition-all mb-4 rounded-lg"
      >
        Connect Wallet
      </button>
      <button
        aria-label="Export authentication data to CSV"
        class="w-full inline-flex items-center justify-center gap-2 px-4 py-2.5 h-10 bg-gray-100 text-gray-700 text-sm font-semibold hover:bg-gray-200 active:scale-95 transition-all mb-6 rounded-lg"
      >
        Export to CSV
      </button>
    </div>
    <div
      class="hidden lg:block lg:w-[60%] bg-gray-50 relative overflow-hidden"
    >
      <img
        alt="Tradazone — invoices, payments, crypto"
        class="absolute inset-0 w-full h-full object-cover"
        src="auth-splash.svg"
      />
    </div>
  </div>
</div>
`;

exports[`Auth module snapshots - SignIn > matches snapshot when the session-expired banner is shown 1`] = `
<div
  class="min-h-screen flex flex-col"
>
  <div
    class="flex flex-1"
  >
    <div
      class="w-full lg:w-[40%] flex flex-col justify-start px-6 py-8 lg:px-10 lg:py-10 bg-white overflow-y-auto"
    >
      <div
        class="mb-8 lg:mb-12"
      >
        <img
          alt="Tradazone"
          class="object-contain h-7 lg:h-9"
          src="logo-blue.png"
        />
      </div>
      <div
        class="flex items-center gap-2 px-4 py-3 mb-6 bg-amber-50 border border-amber-200 rounded-lg text-sm text-amber-800"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-alert flex-shrink-0"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <line
            x1="12"
            x2="12"
            y1="8"
            y2="12"
          />
          <line
            x1="12"
            x2="12.01"
            y1="16"
            y2="16"
          />
        </svg>
        <span>
          Your session expired — reconnect to continue.
        </span>
      </div>
      <h1
        class="text-xl lg:text-3xl font-bold text-t-primary mb-3 leading-snug"
      >
        Manage clients, send invoices, and accept payments directly into your preferred wallet
      </h1>
      <p
        class="text-sm text-t-muted mb-8 lg:mb-10"
      >
        Connect your wallet to get started
      </p>
      <div
        class="mb-6 rounded-xl border border-border bg-gray-50/80 p-4"
      >
        <div
          class="mb-3"
        >
          <h2
            class="text-sm font-semibold text-t-primary"
          >
            Business description draft
          </h2>
          <p
            class="text-xs text-t-muted"
          >
            Add formatted context about your business before you connect. Tradazone keeps this draft on this device and syncs it into your profile after the next successful wallet session.
          </p>
        </div>
        <div
          class="flex flex-col gap-1.5 "
        >
          <label
            class="text-xs font-medium text-t-secondary uppercase tracking-wide"
            for="signin-business-description"
          >
            Business Description
          </label>
          <div
            class="border rounded-lg bg-white border-border"
          >
            <div
              class="flex flex-wrap items-center gap-2 px-3 py-2 border-b border-border bg-gray-50 rounded-t-lg"
            >
              <button
                aria-label="Bold"
                class="inline-flex min-w-8 items-center justify-center rounded-md border border-border bg-white px-2 py-1 text-xs font-semibold text-t-secondary hover:border-brand hover:text-brand"
                type="button"
              >
                B
              </button>
              <button
                aria-label="Italic"
                class="inline-flex min-w-8 items-center justify-center rounded-md border border-border bg-white px-2 py-1 text-xs font-semibold text-t-secondary hover:border-brand hover:text-brand"
                type="button"
              >
                I
              </button>
              <button
                aria-label="Bullets"
                class="inline-flex min-w-8 items-center justify-center rounded-md border border-border bg-white px-2 py-1 text-xs font-semibold text-t-secondary hover:border-brand hover:text-brand"
                type="button"
              >
                List
              </button>
              <button
                aria-label="Clear formatting"
                class="inline-flex min-w-8 items-center justify-center rounded-md border border-border bg-white px-2 py-1 text-xs font-semibold text-t-secondary hover:border-brand hover:text-brand"
                type="button"
              >
                Clear
              </button>
            </div>
            <div
              class="relative"
            >
              <span
                class="pointer-events-none absolute left-3 top-3 text-sm text-t-muted"
              >
                Describe your business, products, or services before connecting...
              </span>
              <div
                aria-label="Business Description"
                aria-multiline="true"
                class="min-h-36 px-3 py-3 text-sm text-t-primary outline-none"
                contenteditable="true"
                id="signin-business-description"
                role="textbox"
              />
            </div>
          </div>
          <span
            class="text-xs text-t-muted"
          >
            Supports bold, italic, and bullet lists. The draft is sanitized before it is stored.
          </span>
        </div>
      </div>
      <button
        class="w-full inline-flex items-center justify-center gap-2 px-4 py-2.5 h-10 bg-brand text-white text-sm font-semibold hover:opacity-90 active:scale-95 transition-all mb-4 rounded-lg"
      >
        Connect Wallet
      </button>
      <button
        aria-label="Export authentication data to CSV"
        class="w-full inline-flex items-center justify-center gap-2 px-4 py-2.5 h-10 bg-gray-100 text-gray-700 text-sm font-semibold hover:bg-gray-200 active:scale-95 transition-all mb-6 rounded-lg"
      >
        Export to CSV
      </button>
    </div>
    <div
      class="hidden lg:block lg:w-[60%] bg-gray-50 relative overflow-hidden"
    >
      <img
        alt="Tradazone — invoices, payments, crypto"
        class="absolute inset-0 w-full h-full object-cover"
        src="auth-splash.svg"
      />
    </div>
  </div>
</div>
`;

exports[`Auth module snapshots - SignUp > matches snapshot for unauthenticated state 1`] = `
<div
  class="min-h-screen flex flex-col"
>
  <div
    class="flex flex-1"
  >
    <div
      class="w-full lg:w-[40%] flex flex-col justify-start px-6 py-8 lg:px-10 lg:py-10 bg-white overflow-y-auto"
    >
      <div
        class="mb-8 lg:mb-12"
      >
        <img
          alt="Tradazone"
          class="object-contain h-7 lg:h-9"
          src="logo-blue.png"
        />
      </div>
      <h1
        class="text-xl lg:text-3xl font-bold text-t-primary mb-3 leading-snug"
      >
        Manage clients, send invoices, and accept payments directly into your preferred wallet
      </h1>
      <p
        class="text-sm text-t-muted mb-8 lg:mb-10"
      >
        Connect your wallet to get started
      </p>
      <div
        class="mb-6 rounded-xl border border-border bg-gray-50/80 p-4"
      >
        <div
          class="mb-3"
        >
          <h2
            class="text-sm font-semibold text-t-primary"
          >
            Business description draft
          </h2>
          <p
            class="text-xs text-t-muted"
          >
            Add formatted context about your business before you connect. Tradazone keeps this draft on this device and syncs it into your profile after your first successful wallet session.
          </p>
        </div>
        <div
          class="flex flex-col gap-1.5 "
        >
          <label
            class="text-xs font-medium text-t-secondary uppercase tracking-wide"
            for="signup-business-description"
          >
            Business Description
          </label>
          <div
            class="border rounded-lg bg-white border-border"
          >
            <div
              class="flex flex-wrap items-center gap-2 px-3 py-2 border-b border-border bg-gray-50 rounded-t-lg"
            >
              <button
                aria-label="Bold"
                class="inline-flex min-w-8 items-center justify-center rounded-md border border-border bg-white px-2 py-1 text-xs font-semibold text-t-secondary hover:border-brand hover:text-brand"
                type="button"
              >
                B
              </button>
              <button
                aria-label="Italic"
                class="inline-flex min-w-8 items-center justify-center rounded-md border border-border bg-white px-2 py-1 text-xs font-semibold text-t-secondary hover:border-brand hover:text-brand"
                type="button"
              >
                I
              </button>
              <button
                aria-label="Bullets"
                class="inline-flex min-w-8 items-center justify-center rounded-md border border-border bg-white px-2 py-1 text-xs font-semibold text-t-secondary hover:border-brand hover:text-brand"
                type="button"
              >
                List
              </button>
              <button
                aria-label="Clear formatting"
                class="inline-flex min-w-8 items-center justify-center rounded-md border border-border bg-white px-2 py-1 text-xs font-semibold text-t-secondary hover:border-brand hover:text-brand"
                type="button"
              >
                Clear
              </button>
            </div>
            <div
              class="relative"
            >
              <span
                class="pointer-events-none absolute left-3 top-3 text-sm text-t-muted"
              >
                Describe your business, products, or services before connecting...
              </span>
              <div
                aria-label="Business Description"
                aria-multiline="true"
                class="min-h-36 px-3 py-3 text-sm text-t-primary outline-none"
                contenteditable="true"
                id="signup-business-description"
                role="textbox"
              />
            </div>
          </div>
          <span
            class="text-xs text-t-muted"
          >
            Supports bold, italic, and bullet lists. The draft is sanitized for security.
          </span>
        </div>
      </div>
      <button
        class="w-full inline-flex items-center justify-center gap-2 px-4 py-2.5 h-10 bg-brand text-white text-sm font-semibold hover:opacity-90 active:scale-95 transition-all mb-4 rounded-lg"
      >
        Connect Wallet
      </button>
      <button
        aria-label="Export signup data to CSV"
        class="w-full inline-flex items-center justify-center gap-2 px-4 py-2.5 h-10 bg-gray-100 text-gray-700 text-sm font-semibold hover:bg-gray-200 active:scale-95 transition-all mb-6 rounded-lg"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-download"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 15V3"
          />
          <path
            d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
          />
          <path
            d="m7 10 5 5 5-5"
          />
        </svg>
        Export to CSV
      </button>
    </div>
    <div
      class="hidden lg:block lg:w-[60%] bg-gray-50 relative overflow-hidden"
    >
      <img
        alt="Tradazone — invoices, payments, crypto"
        class="absolute inset-0 w-full h-full object-cover"
        src="auth-splash.svg"
      />
    </div>
  </div>
</div>
`;

exports[`Auth module snapshots - SignUp > matches snapshot when a profile description draft is already present 1`] = `
<div
  class="min-h-screen flex flex-col"
>
  <div
    class="flex flex-1"
  >
    <div
      class="w-full lg:w-[40%] flex flex-col justify-start px-6 py-8 lg:px-10 lg:py-10 bg-white overflow-y-auto"
    >
      <div
        class="mb-8 lg:mb-12"
      >
        <img
          alt="Tradazone"
          class="object-contain h-7 lg:h-9"
          src="logo-blue.png"
        />
      </div>
      <h1
        class="text-xl lg:text-3xl font-bold text-t-primary mb-3 leading-snug"
      >
        Manage clients, send invoices, and accept payments directly into your preferred wallet
      </h1>
      <p
        class="text-sm text-t-muted mb-8 lg:mb-10"
      >
        Connect your wallet to get started
      </p>
      <div
        class="mb-6 rounded-xl border border-border bg-gray-50/80 p-4"
      >
        <div
          class="mb-3"
        >
          <h2
            class="text-sm font-semibold text-t-primary"
          >
            Business description draft
          </h2>
          <p
            class="text-xs text-t-muted"
          >
            Add formatted context about your business before you connect. Tradazone keeps this draft on this device and syncs it into your profile after your first successful wallet session.
          </p>
        </div>
        <div
          class="flex flex-col gap-1.5 "
        >
          <label
            class="text-xs font-medium text-t-secondary uppercase tracking-wide"
            for="signup-business-description"
          >
            Business Description
          </label>
          <div
            class="border rounded-lg bg-white border-border"
          >
            <div
              class="flex flex-wrap items-center gap-2 px-3 py-2 border-b border-border bg-gray-50 rounded-t-lg"
            >
              <button
                aria-label="Bold"
                class="inline-flex min-w-8 items-center justify-center rounded-md border border-border bg-white px-2 py-1 text-xs font-semibold text-t-secondary hover:border-brand hover:text-brand"
                type="button"
              >
                B
              </button>
              <button
                aria-label="Italic"
                class="inline-flex min-w-8 items-center justify-center rounded-md border border-border bg-white px-2 py-1 text-xs font-semibold text-t-secondary hover:border-brand hover:text-brand"
                type="button"
              >
                I
              </button>
              <button
                aria-label="Bullets"
                class="inline-flex min-w-8 items-center justify-center rounded-md border border-border bg-white px-2 py-1 text-xs font-semibold text-t-secondary hover:border-brand hover:text-brand"
                type="button"
              >
                List
              </button>
              <button
                aria-label="Clear formatting"
                class="inline-flex min-w-8 items-center justify-center rounded-md border border-border bg-white px-2 py-1 text-xs font-semibold text-t-secondary hover:border-brand hover:text-brand"
                type="button"
              >
                Clear
              </button>
            </div>
            <div
              class="relative"
            >
              <div
                aria-label="Business Description"
                aria-multiline="true"
                class="min-h-36 px-3 py-3 text-sm text-t-primary outline-none"
                contenteditable="true"
                id="signup-business-description"
                role="textbox"
              >
                <p>
                  Crypto invoicing for subscription teams.
                </p>
              </div>
            </div>
          </div>
          <span
            class="text-xs text-t-muted"
          >
            Supports bold, italic, and bullet lists. The draft is sanitized for security.
          </span>
        </div>
        <p
          class="mt-3 text-xs font-medium text-brand"
        >
          Your latest description draft will be attached to your new profile.
        </p>
      </div>
      <button
        class="w-full inline-flex items-center justify-center gap-2 px-4 py-2.5 h-10 bg-brand text-white text-sm font-semibold hover:opacity-90 active:scale-95 transition-all mb-4 rounded-lg"
      >
        Connect Wallet
      </button>
      <button
        aria-label="Export signup data to CSV"
        class="w-full inline-flex items-center justify-center gap-2 px-4 py-2.5 h-10 bg-gray-100 text-gray-700 text-sm font-semibold hover:bg-gray-200 active:scale-95 transition-all mb-6 rounded-lg"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-download"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 15V3"
          />
          <path
            d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
          />
          <path
            d="m7 10 5 5 5-5"
          />
        </svg>
        Export to CSV
      </button>
    </div>
    <div
      class="hidden lg:block lg:w-[60%] bg-gray-50 relative overflow-hidden"
    >
      <img
        alt="Tradazone — invoices, payments, crypto"
        class="absolute inset-0 w-full h-full object-cover"
        src="auth-splash.svg"
      />
    </div>
  </div>
</div>
`;
